[gd_scene load_steps=8 format=2]

[ext_resource path="res://Other/icon.png" type="Texture" id=1]
[ext_resource path="res://Maze/Maze.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 53, 34.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 54, 34.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6, 6 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )

[node name="Maze" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Level1" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Collision" type="Node2D" parent="Level1"]

[node name="Level1Area" type="Area2D" parent="Level1/Collision"]

[node name="Level1Collision" type="CollisionPolygon2D" parent="Level1/Collision/Level1Area"]
polygon = PoolVector2Array( 0, -1, 1281, 0, 1280, 720, 763, 721, 763, 101, 1165, 101, 1165, 32, 465, 32, 464, 715, 763, 715, 763, 721, 0, 722 )

[node name="RedLevel1Area" type="Area2D" parent="Level1/Collision"]

[node name="RedLevel1Collision" type="CollisionShape2D" parent="Level1/Collision/RedLevel1Area"]
position = Vector2( 1112, 66.5 )
shape = SubResource( 1 )

[node name="Level" type="Control" parent="Level1"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cyan1" type="ColorRect" parent="Level1/Level"]
anchor_left = 0.363
anchor_top = 0.044
anchor_right = 0.596
anchor_bottom = 0.993
margin_left = 0.359985
margin_top = 0.319996
margin_right = 0.119995
margin_bottom = 0.039978
rect_pivot_offset = Vector2( -776, -125 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan2" type="ColorRect" parent="Level1/Level"]
anchor_left = 0.573
anchor_top = 0.044
anchor_right = 0.836
anchor_bottom = 0.14
margin_left = 0.559998
margin_top = 0.32
margin_right = -0.0800781
margin_bottom = 0.199997
rect_pivot_offset = Vector2( -776, -125 )
color = Color( 0, 1, 1, 1 )

[node name="Red" type="ColorRect" parent="Level1/Level"]
anchor_left = 0.83
anchor_top = 0.044
anchor_right = 0.915
anchor_bottom = 0.14
margin_left = 0.599976
margin_top = 0.319998
margin_right = -0.200073
margin_bottom = 0.199997
rect_pivot_offset = Vector2( -776, -125 )
color = Color( 1, 0, 0, 1 )

[node name="Level1Label" type="Label" parent="Level1/Level/Red"]
anchor_left = 0.283
anchor_top = 1.145
anchor_right = 0.698
anchor_bottom = 1.362
margin_left = 0.00199699
margin_top = -0.00500488
margin_right = 0.012001
margin_bottom = 0.0219955
text = "Level1"

[node name="Level2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Collision" type="Node2D" parent="Level2"]

[node name="Level2Area" type="Area2D" parent="Level2/Collision"]

[node name="Level2Collision" type="CollisionPolygon2D" parent="Level2/Collision/Level2Area"]
polygon = PoolVector2Array( 0, 0, 1280, 0, 1281, 720, 0, 720, 0, 687, 1171, 687, 1171, 450, 267, 450, 267, 374, 1171, 374, 1171, 164, 266, 164, 266, 100, 1171, 100, 1171, 31, 159, 31, 159, 233, 1063, 233, 1063, 305, 159, 305, 159, 519, 1063, 519, 1063, 618, 159, 618, 159, 687, 0, 687 )

[node name="RedLevel2Area" type="Area2D" parent="Level2/Collision"]

[node name="RedLevel2Collision" type="CollisionShape2D" parent="Level2/Collision/RedLevel2Area"]
position = Vector2( 213, 652.5 )
shape = SubResource( 2 )

[node name="Level" type="Control" parent="Level2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cyan1" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.124
anchor_top = 0.043
anchor_right = 0.915
anchor_bottom = 0.139
margin_left = 0.279999
margin_top = 0.039999
margin_right = -0.200073
margin_bottom = -0.0800095
rect_pivot_offset = Vector2( -458, 35 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan2" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.124
anchor_top = 0.093
anchor_right = 0.209
anchor_bottom = 0.278
margin_left = 0.279999
margin_top = 0.0400009
margin_right = -0.52002
margin_bottom = -0.160019
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan3" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.124
anchor_top = 0.228
anchor_right = 0.915
anchor_bottom = 0.324
margin_left = 0.279999
margin_top = -0.160004
margin_right = -0.200073
margin_bottom = -0.279999
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan4" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.83
anchor_top = 0.278
anchor_right = 0.915
anchor_bottom = 0.471
margin_left = 0.599976
margin_top = -0.160019
margin_right = -0.200073
margin_bottom = -0.120026
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan5" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.124
anchor_top = 0.424
anchor_right = 0.915
anchor_bottom = 0.519
margin_left = 0.279999
margin_top = -0.279999
margin_right = -0.200073
margin_bottom = 0.319946
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan6" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.124
anchor_top = 0.471
anchor_right = 0.209
anchor_bottom = 0.674
margin_left = 0.279999
margin_top = -0.120026
margin_right = -0.52002
margin_bottom = -0.280029
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan7" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.124
anchor_top = 0.625
anchor_right = 0.915
anchor_bottom = 0.721
margin_left = 0.279999
margin_right = -0.200073
margin_bottom = -0.119995
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan8" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.83
anchor_top = 0.674
anchor_right = 0.915
anchor_bottom = 0.897
margin_left = 0.599976
margin_top = -0.280029
margin_right = -0.200073
margin_bottom = 0.159973
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan9" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.124
anchor_top = 0.858
anchor_right = 0.915
anchor_bottom = 0.954
margin_left = 0.279999
margin_top = 0.23999
margin_right = -0.200073
margin_bottom = 0.119934
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Red" type="ColorRect" parent="Level2/Level"]
anchor_left = 0.124
anchor_top = 0.858
anchor_right = 0.209
anchor_bottom = 0.954
margin_left = 0.279999
margin_top = 0.23999
margin_right = -0.52002
margin_bottom = 0.119934
rect_pivot_offset = Vector2( 248, 0 )
color = Color( 1, 0, 0, 1 )

[node name="Level2Label" type="Label" parent="Level2/Level/Red"]
anchor_left = 0.287
anchor_top = -0.29
anchor_right = 0.704
anchor_bottom = -0.087
margin_left = 0.00399971
margin_top = 0.0100021
margin_right = -0.0320053
margin_bottom = 0.00300026
text = "Level2"

[node name="Level3" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Collision" type="Node2D" parent="Level3"]

[node name="Level3Area" type="Area2D" parent="Level3/Collision"]

[node name="Level3Collision" type="CollisionPolygon2D" parent="Level3/Collision/Level3Area"]
polygon = PoolVector2Array( 0, 0, 1280, 0, 1280, 720, 0, 721, 0, 688, 175, 688, 1120, 688, 1120, 462, 252, 462, 252, 353, 576, 353, 576, 321, 673, 321, 673, 227, 620, 227, 620, 211, 673, 211, 673, 150, 709, 150, 709, 70, 620, 70, 620, 150, 653, 150, 653, 193, 602, 193, 602, 245, 654, 245, 654, 301, 179, 301, 179, 532, 1047, 532, 1047, 618, 175, 618, 175, 688, 0, 688 )

[node name="RedLevel3Area" type="Area2D" parent="Level3/Collision"]
position = Vector2( 16, 0 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Level3/Collision/RedLevel3Area"]
position = Vector2( -49, 0 )
polygon = PoolVector2Array( 653, 70, 653, 150, 686, 150, 686, 193, 635, 193, 635, 218, 635, 245, 687, 245, 687, 251, 706, 251, 706, 227, 653, 227, 653, 211, 706, 211, 706, 150, 742, 150, 742, 70 )

[node name="Level" type="Control" parent="Level3"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Cyan1" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.137
anchor_top = 0.858
anchor_right = 0.875
anchor_bottom = 0.956
margin_left = -0.360016
margin_top = 0.23999
margin_right = -0.000244141
margin_bottom = -0.320007
rect_pivot_offset = Vector2( -394, -150 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan2" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.818
anchor_top = 0.69
anchor_right = 0.875
anchor_bottom = 0.903
margin_left = -0.0400391
margin_top = 0.199951
margin_right = -0.00012207
margin_bottom = -0.160095
rect_pivot_offset = Vector2( -471, -46 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan3" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.14
anchor_top = 0.642
anchor_right = 0.875
anchor_bottom = 0.739
margin_left = -0.199997
margin_top = -0.240021
margin_right = -0.00012207
margin_bottom = -0.0800171
rect_pivot_offset = Vector2( 470.5, 35 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan4" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.14
anchor_top = 0.454
anchor_right = 0.197
anchor_bottom = 0.699
margin_left = -0.199997
margin_top = 0.119995
margin_right = -0.160004
margin_bottom = -0.280029
rect_pivot_offset = Vector2( 36.5, 81 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan5" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.14
anchor_top = 0.418
anchor_right = 0.45
anchor_bottom = 0.49
margin_left = -0.199997
margin_top = 0.039978
margin_bottom = 0.199982
rect_pivot_offset = Vector2( 163, 26 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan6" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.437
anchor_top = 0.418
anchor_right = 0.526
anchor_bottom = 0.446
margin_left = 0.640015
margin_top = 0.039978
margin_right = -0.280029
margin_bottom = -0.119995
rect_pivot_offset = Vector2( 369, 35 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan7" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.511
anchor_top = 0.328
anchor_right = 0.526
anchor_bottom = 0.431
margin_left = -0.0800781
margin_top = -0.160004
margin_right = -0.280029
margin_bottom = -0.320007
rect_pivot_offset = Vector2( 369, 35 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan8" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.47
anchor_top = 0.315
anchor_right = 0.526
anchor_bottom = 0.34
margin_left = 0.399963
margin_top = 0.199982
margin_right = -0.280029
margin_bottom = 0.199997
rect_pivot_offset = Vector2( 34, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan9" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.47
anchor_top = 0.281
anchor_right = 0.484
anchor_bottom = 0.328
margin_left = 0.399963
margin_top = -0.320007
margin_right = 0.47998
margin_bottom = -0.160004
rect_pivot_offset = Vector2( 369, 35 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan10" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.47
anchor_top = 0.268
anchor_right = 0.526
anchor_bottom = 0.293
margin_left = 0.399963
margin_top = 0.0399933
margin_right = -0.280029
margin_bottom = 0.0399933
rect_pivot_offset = Vector2( 34, 0 )
color = Color( 0, 1, 1, 1 )

[node name="Cyan11" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.51
anchor_top = 0.194
anchor_right = 0.527
anchor_bottom = 0.281
margin_left = 0.199951
margin_top = 0.319992
margin_right = -1.56
margin_bottom = -0.320023
rect_pivot_offset = Vector2( 10, 31 )
color = Color( 0, 1, 1, 1 )

[node name="Red" type="ColorRect" parent="Level3/Level"]
anchor_left = 0.484
anchor_top = 0.097
anchor_right = 0.554
anchor_bottom = 0.208
margin_left = 0.47998
margin_top = 0.159996
margin_right = -0.119995
margin_bottom = 0.23999
rect_pivot_offset = Vector2( -459, 86 )
color = Color( 1, 0.164706, 0, 1 )

[node name="Level3Label" type="Label" parent="Level3/Level/Red"]
anchor_left = 1.157
anchor_top = 0.412
anchor_right = 1.663
anchor_bottom = 0.587
margin_left = 0.0269928
margin_top = 0.0399971
margin_right = -0.00700378
margin_bottom = 0.0400009
text = "Level3"

[node name="Dot" type="KinematicBody2D" parent="."]
position = Vector2( 640, 550 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dot"]
shape = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="Dot"]
margin_left = -6.0
margin_top = -6.0
margin_right = 6.0
margin_bottom = 6.0
color = Color( 0, 0.227451, 1, 1 )

[node name="Menu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuColorRect" type="ColorRect" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 1, 1, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
margin_left = 489.0
margin_top = 292.0
margin_right = 791.0
margin_bottom = 427.0

[node name="TheMaze" type="Label" parent="Menu/CenterContainer/VBoxContainer"]
margin_right = 302.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "The Maze^TM (v1.1)
"
align = 1

[node name="Test" type="Label" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 35.0
margin_right = 302.0
margin_bottom = 117.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Test your skills!
Try to reach the goal without touching the walls
How steady is your hand?
Let's find out! Try and beat all four levels!
"
align = 1

[node name="Sound" type="Label" parent="Menu/CenterContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 302.0
margin_bottom = 135.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "sound effects will help"
align = 1

[node name="Play" type="Button" parent="Menu"]
anchor_left = 0.452
anchor_top = 0.728
anchor_right = 0.548
anchor_bottom = 0.818
margin_left = -0.560059
margin_top = -0.160034
margin_right = 0.559937
margin_bottom = 0.039978
text = "Play"

[node name="ImportantRect" type="ColorRect" parent="Menu"]
anchor_left = 0.495
anchor_right = 0.999
anchor_bottom = 0.224
margin_left = -0.600037
margin_top = 13.0
margin_right = -13.7201
margin_bottom = -0.279999
mouse_filter = 2
color = Color( 1, 1, 1, 0.65098 )

[node name="Important" type="Label" parent="Menu/ImportantRect"]
anchor_left = -0.021
anchor_top = 0.095
anchor_right = 1.022
anchor_bottom = 0.764
margin_left = 0.272001
margin_top = -0.0600014
margin_right = 0.0959473
margin_bottom = -0.0720062
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "IMPORTANT!!!
This is fan-made recreation of original \"The Maze^TM (v1.1)\" by Jeremy Winterrowd.
This is just a template made in Godot Game Engine.
This game doesn't have jumpscare or sound effects. (if it is original game from the source below)
Source code: https://github.com/mikikupus/godot-scary-maze-game
Contact: onlymihajlo@gmail.com"
align = 1
valign = 1

[node name="SourceCode" type="Button" parent="Menu/ImportantRect"]
anchor_left = 0.419
anchor_top = 0.811
anchor_right = 0.563
anchor_bottom = 0.926
margin_left = 0.191986
margin_top = -0.0280075
margin_right = 0.18399
margin_bottom = 2.952
text = "Source Code"

[node name="MenuBack" type="Button" parent="Menu/ImportantRect"]
anchor_left = 0.016
anchor_top = 0.811
anchor_right = 0.16
anchor_bottom = 0.946
margin_left = -0.112
margin_top = -0.0280075
margin_right = -0.12001
margin_bottom = -0.00801086
text = "Back"

[node name="Picture" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Sprite" type="Sprite" parent="Picture"]
self_modulate = Color( 0.396078, 0.396078, 0.396078, 1 )
material = SubResource( 5 )
position = Vector2( 640, 360 )
scale = Vector2( 25, 11.5 )
texture = ExtResource( 1 )

[node name="PictureLabelEnd" type="Control" parent="Picture"]
anchor_left = 0.446
anchor_top = 0.376
anchor_right = 0.462
anchor_bottom = 0.404
margin_left = 0.619995
margin_top = 0.279999
margin_right = 0.140015
margin_bottom = 0.119995
rect_pivot_offset = Vector2( 10, 10 )

[node name="PictureLabelControl" type="Control" parent="Picture"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 20, 20 )

[node name="WarningLabel" type="Label" parent="Picture/PictureLabelControl"]
anchor_left = 0.5
anchor_top = 0.555
anchor_right = 0.5
anchor_bottom = 0.555
margin_left = -96.5
margin_top = -15.1
margin_right = 96.5
margin_bottom = 15.9
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 96.5, 15.5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "(The site no longer exists!)
(Don't visit!)"
align = 1
valign = 1
uppercase = true

[node name="PictureLabel" type="Label" parent="Picture/PictureLabelControl"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -7.0
margin_right = 68.5
margin_bottom = 7.0
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 68.5, 7 )
text = "www.winterrowd.com"
align = 1
valign = 1

[node name="Buttons" type="Control" parent="Picture"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PictureButtons" type="VBoxContainer" parent="Picture/Buttons"]
anchor_left = 0.732
anchor_top = 0.643
anchor_right = 0.851
anchor_bottom = 0.761
margin_left = 0.039917
margin_top = 0.0400085
margin_right = -0.280029
margin_bottom = 0.0799561
custom_constants/separation = 5
alignment = 1

[node name="Replay" type="Button" parent="Picture/Buttons/PictureButtons"]
margin_right = 152.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 40 )
text = "Replay?"

[node name="SourceCode" type="Button" parent="Picture/Buttons/PictureButtons"]
margin_top = 45.0
margin_right = 152.0
margin_bottom = 85.0
rect_min_size = Vector2( 140, 40 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Source Code"

[node name="Email" type="Button" parent="Picture/Buttons"]
anchor_top = 0.903
anchor_right = 0.109
anchor_bottom = 1.0
margin_left = 44.0
margin_top = -0.160095
margin_right = -0.520004
margin_bottom = -17.0001
text = "Email Jeremy"

[node name="Left" type="Label" parent="Picture/Buttons/Email"]
anchor_left = -0.463
anchor_top = -0.66
anchor_right = 1.189
anchor_bottom = 1.0
margin_left = 31.985
margin_top = -0.0199394
margin_right = 0.0449982
margin_bottom = -56.9999
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Source code link
actually!"
align = 1
valign = 1
uppercase = true

[node name="Visit" type="Button" parent="Picture/Buttons"]
anchor_left = 0.89
anchor_top = 0.903
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.200073
margin_top = -0.160095
margin_right = -44.0
margin_bottom = -17.0001
text = "Visit Website"

[node name="Right" type="Label" parent="Picture/Buttons/Visit"]
anchor_left = -0.175
anchor_top = -0.66
anchor_right = 1.443
anchor_bottom = 1.0
margin_left = -0.0249996
margin_top = -0.0199394
margin_right = -31.971
margin_bottom = -56.9999
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Source code link
actually!"
align = 1
valign = 1
uppercase = true

[node name="ShareControl" type="Control" parent="Picture/Buttons"]
anchor_left = 0.773
anchor_right = 1.0
anchor_bottom = 0.212
margin_left = -0.440063
margin_bottom = -2.64001

[node name="ShareButtons" type="HBoxContainer" parent="Picture/Buttons/ShareControl"]
anchor_left = 0.488
anchor_top = 0.407
anchor_right = 0.849
anchor_bottom = 0.74
margin_left = -0.00801086
margin_top = -0.0499954
margin_right = -0.059021
rect_min_size = Vector2( 0, 50 )
custom_constants/separation = 5
alignment = 1

[node name="FBButton" type="Button" parent="Picture/Buttons/ShareControl/ShareButtons"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "FB"

[node name="TButton" type="Button" parent="Picture/Buttons/ShareControl/ShareButtons"]
margin_left = 55.0
margin_right = 105.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
text = "T"

[node name="ShareLabel" type="Label" parent="Picture/Buttons/ShareControl"]
anchor_left = 0.052
anchor_top = 0.18
anchor_right = 0.876
anchor_bottom = 0.367
margin_left = -0.132
margin_right = -119.916
margin_bottom = -14.05
rect_scale = Vector2( 2, 2 )
text = "click icon to share!"
align = 1

[node name="TextLabel" type="Label" parent="Picture/Buttons"]
anchor_right = 0.021
anchor_bottom = 0.022
margin_left = 27.0
margin_top = 17.0
margin_right = 420.12
margin_bottom = 15.16
rect_scale = Vector2( 1.5, 1.5 )
text = "TM & © 2004 Warner Bros. Entertainment Inc. All rights reserved."
align = 1
valign = 1

[node name="WarningLabel" type="Label" parent="Picture/Buttons/TextLabel"]
anchor_left = -0.043
anchor_top = -0.81
anchor_right = 0.864
anchor_bottom = 2.119
margin_left = 69.3933
margin_top = 27.0067
margin_right = -3.54672
margin_bottom = 0.000663757
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "(this is in the original game so i added it!)"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="Play" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayColorRect" type="ColorRect" parent="Play"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 1, 1, 1 )

[node name="Play" type="Button" parent="Play"]
anchor_left = 0.5
anchor_top = 0.465
anchor_right = 0.5
anchor_bottom = 0.465
margin_left = -10.0
margin_top = -9.80002
margin_right = 10.0
margin_bottom = 10.2
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 10, 10 )
custom_colors/font_color_focus = Color( 0.92549, 0.870588, 0.0666667, 1 )
custom_colors/font_color = Color( 0.92549, 0.870588, 0.0666667, 1 )
custom_colors/font_color_hover = Color( 0.937255, 0.54902, 0, 1 )
custom_colors/font_color_pressed = Color( 0.92549, 0.870588, 0.0666667, 1 )
text = ">"
icon_align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Play"]
anchor_left = 0.5
anchor_top = 0.51
anchor_right = 0.5
anchor_bottom = 0.51
margin_left = -96.5
margin_top = 0.299957
margin_right = 96.5
margin_bottom = 67.3
alignment = 1

[node name="PlayLabel" type="Label" parent="Play/VBoxContainer"]
margin_right = 193.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play the Maze!"
align = 1
valign = 1

[node name="LinkLabel" type="Label" parent="Play/VBoxContainer"]
margin_top = 18.0
margin_right = 193.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "© winterrowd.com"
align = 1
valign = 1

[node name="WarningLabel" type="Label" parent="Play/VBoxContainer"]
margin_top = 36.0
margin_right = 193.0
margin_bottom = 67.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "(The site no longer exists!)
(Don't visit!)"
align = 1
valign = 1
uppercase = true

[node name="ImportantRect" type="ColorRect" parent="Play"]
anchor_left = 0.495
anchor_right = 0.999
anchor_bottom = 0.224
margin_left = -0.600037
margin_top = 13.0
margin_right = -13.7201
margin_bottom = -0.279999
mouse_filter = 2
color = Color( 1, 1, 1, 0.65098 )

[node name="Important" type="Label" parent="Play/ImportantRect"]
anchor_left = -0.021
anchor_top = 0.095
anchor_right = 1.022
anchor_bottom = 0.764
margin_left = 0.272001
margin_top = -0.0600014
margin_right = 0.0959473
margin_bottom = -0.0720062
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "IMPORTANT!!!
This is fan-made recreation of original \"The Maze^TM (v1.1)\" by Jeremy Winterrowd.
This is just a template made in Godot Game Engine.
This game doesn't have jumpscare or sound effects. (if it is original game from the source below)
Source code: https://github.com/mikikupus/godot-scary-maze-game
Contact: onlymihajlo@gmail.com"
align = 1
valign = 1

[node name="SourceCode" type="Button" parent="Play/ImportantRect"]
anchor_left = 0.419
anchor_top = 0.811
anchor_right = 0.563
anchor_bottom = 0.926
margin_left = 0.191986
margin_top = -0.0280075
margin_right = 0.18399
margin_bottom = 2.952
text = "Source Code"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="resized" from="." to="." method="_on_Maze_resized"]
[connection signal="body_entered" from="Level1/Collision/Level1Area" to="." method="_on_LevelArea_body_entered" binds= [ 2 ]]
[connection signal="body_entered" from="Level1/Collision/RedLevel1Area" to="." method="_on_RedArea_body_entered" binds= [ 2 ]]
[connection signal="body_entered" from="Level2/Collision/Level2Area" to="." method="_on_LevelArea_body_entered" binds= [ 3 ]]
[connection signal="body_entered" from="Level2/Collision/RedLevel2Area" to="." method="_on_RedArea_body_entered" binds= [ 3 ]]
[connection signal="body_entered" from="Level3/Collision/Level3Area" to="." method="_on_LevelArea_body_entered" binds= [ 4 ]]
[connection signal="body_entered" from="Level3/Collision/RedLevel3Area" to="." method="_on_RedArea_body_entered" binds= [ 4 ]]
[connection signal="pressed" from="Menu/Play" to="." method="_change_visible" binds= [ 2 ]]
[connection signal="pressed" from="Menu/ImportantRect/SourceCode" to="." method="_open_website" binds= [ 0 ]]
[connection signal="pressed" from="Menu/ImportantRect/MenuBack" to="." method="_change_visible" binds= [ 0 ]]
[connection signal="pressed" from="Picture/Buttons/PictureButtons/Replay" to="." method="_change_visible" binds= [ 1 ]]
[connection signal="pressed" from="Picture/Buttons/PictureButtons/SourceCode" to="." method="_open_website" binds= [ 0 ]]
[connection signal="pressed" from="Picture/Buttons/Email" to="." method="_open_website" binds= [ 0 ]]
[connection signal="pressed" from="Picture/Buttons/Visit" to="." method="_open_website" binds= [ 0 ]]
[connection signal="pressed" from="Picture/Buttons/ShareControl/ShareButtons/FBButton" to="." method="_open_website" binds= [ 1 ]]
[connection signal="pressed" from="Picture/Buttons/ShareControl/ShareButtons/TButton" to="." method="_open_website" binds= [ 2 ]]
[connection signal="pressed" from="Play/Play" to="." method="_change_visible" binds= [ 1 ]]
[connection signal="pressed" from="Play/ImportantRect/SourceCode" to="." method="_open_website" binds= [ 0 ]]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
